2008-10-06  Chong Yidong  <cyd@stupidchicken.com>

	* emacs.c (Vbefore_init_time, Vafter_init_time): Moved from
	startup.el.

	* lisp.h: (Vbefore_init_time, Vafter_init_time): Declare.

	* gtkutil.c (x_wm_set_size_hint): Return immediately if called
	during initialization.

2008-10-04  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (redisplay_internal): If frame switched, redisplay the
	whole thing on MSDOS frames as well as on a TTY.

	* dispnew.c (update_frame): Flush termscript for MSDOS frames as
	well as for TTY.
	(Fopen_termscript): Allow opening a termscript on MSDOS frames as
	well as on a TTY.

	* sysdep.c (init_sys_modes): Set FRAME_GARBAGED_P for MSDOS frames
	as well as for TTY.

	* systime.h (EMACS_TIME_CMP): Cast EMACS_SECS values to `long'.

	* dispnew.c (change_frame_size_1): Set FrameRows and FrameCols for
	MSDOS frames as well.

2008-10-02  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* image.c (x_clear_image_1): Under NS, call ns_free_indexed_color with
	correct arguments.
	* menu.c (find_and_return_menu_selection) Add cast.

2008-10-03  Glenn Morris  <rgm@gnu.org>

	* emacs.c (USAGE1): Add --daemon.

2008-10-02  Eli Zaretskii  <eliz@gnu.org>

	* process.c (procfs_system_process_attributes): Multiply `pcpu' by
	100, so it's in percents as advertised.

2008-10-02  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.h (ns_cursor_types, ns_output.desired_cursor_color)
	(ns_output.current_cursor, ns_output.desired_cursor)
	(ns_output.last_inactive, FRAME_CURSOR, FRAME_NEW_CURSOR)
	(FRAME_NEW_CURSOR_COLOR): Remove.

	* nsfns.m (ns_set_cursor_color): Use FRAME_CURSOR_COLOR.
	(ns_lisp_to_cursor_type, ns_cursor_type_to_lisp): Use core emacs
	enumeration (HOLLOW_BOX_CURSOR, etc.).

	* nsterm.m (ns_frame_rehighlight): Remove commented code.
	(draw_window_cursor): Simplify code.
	(EmacsView-windowDidBecomeKey:,-windowDidResignKey:): Don't
	change cursor type. In latter, call rehighlight instead of doing
	updates manually.